<?xml version="1.0"?>
<package format="2">
  <name>canfetti</name>
  <version>1.0.0</version>
  <description>CANopen stack by Scythe</description>
  <maintainer email="contact@scytherobotics.com">Scythe Robotics</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
